--- a/app/src/main/res/layout/fragment_test_d.xml
+++ b/app/src/main/res/layout/fragment_test_d.xml
@@ -137,6 +137,14 @@
                 android:text="点我进入崩溃捕捉界面" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_test_RecyclerView"
+                style="@style/ButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="点我进入RecyclerView页面" />
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_test_pay"
                 style="@style/ButtonStyle"
                 android:layout_width="match_parent"
@@ -144,6 +152,8 @@
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="30dp"
                 android:text="丢包辣条给作者" />
+
+
 
         </LinearLayout>
 
