--- a/app/src/main/res/layout/fragment_test_d.xml
+++ b/app/src/main/res/layout/fragment_test_d.xml
@@ -145,6 +145,14 @@
                 android:text="点我进入RecyclerView页面" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_test_ViewPage"
+                style="@style/ButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="点我进入测试fragment页面" />
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_test_pay"
                 style="@style/ButtonStyle"
                 android:layout_width="match_parent"
