--- a/app/src/main/res/layout/activity_personal_data.xml
+++ b/app/src/main/res/layout/activity_personal_data.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -32,11 +33,13 @@
 
         <androidx.cardview.widget.CardView
             style="@style/CircleCardViewStyle"
+
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_gravity="end|center_vertical">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:background="@color/colorGrey_99"
                 android:id="@+id/iv_person_data_avatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -44,6 +47,61 @@
                 android:src="@drawable/ic_head_placeholder" />
 
         </androidx.cardview.widget.CardView>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/selector_white"
+        android:paddingStart="20dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="20dp">
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/personal_data_head"
+            android:textColor="@color/black"
+            android:textSize="16sp" />
+
+
+
+           <com.ljy.demo.widget.MyImageViewCircle
+               android:layout_marginLeft="40dp"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:scaleType="centerCrop"
+               android_custom:yuan_text="张三"
+               android:src="@mipmap/feb"/>
+
+            <com.ljy.demo.widget.MyImageViewCircle
+                android:id="@+id/iv_person_data_circle"
+                android:layout_marginLeft="40dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android_custom:yuan_text="王麻子"
+                android_custom:yuan_textsize="40"
+                android_custom:yuan_textcolor="@color/colorT3"
+                android_custom:yuan_bgcolor="@color/circle_red"
+                android_custom:yuan_alpha="100"
+                android_custom:yuan_Fstatr="40"
+                android_custom:yuan_Fstop="100"
+                android:src="@mipmap/feb"/>
+
+        </LinearLayout>
 
     </FrameLayout>
 
@@ -62,7 +120,7 @@
         android:layout_height="wrap_content"
         app:bar_leftText="@string/personal_data_name"
         app:bar_rightHint="@string/personal_data_name_hint"
-        app:bar_rightText="Android 轮子哥" />
+        app:bar_rightText="Android Liang_liang" />
 
     <com.ljy.widget.layout.SettingBar
         android:id="@+id/sb_person_data_address"
@@ -71,13 +129,14 @@
         app:bar_leftText="@string/personal_data_address"
         app:bar_rightHint="@string/personal_data_address_hint"
         app:bar_rightIcon="@drawable/ico_go_black"
-        app:bar_rightText="广东省广州市天河区" />
+        app:bar_rightText="江苏省苏州市吴中区" />
 
     <com.ljy.widget.layout.SettingBar
         android:id="@+id/sb_person_data_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+
         app:bar_leftText="@string/personal_data_phone"
         app:bar_rightHint="@string/personal_data_phone_hint"
         app:bar_rightIcon="@drawable/ico_go_black" />
