--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -44,4 +44,28 @@
         <attr name="linearProgress" format="boolean" />
     </declare-styleable>
 
+    <!-- 星星控件 -->
+    <declare-styleable name="RatingBar">
+        <!--星星间距-->
+        <attr name="starDistance" format="dimension" />
+        <!--星星大小-->
+        <attr name="starSize" format="dimension" />
+        <!--星星个数-->
+        <attr name="starCount" format="integer" />
+        <!--星星空图-->
+        <attr name="starEmpty" format="reference" />
+        <!--星星满图-->
+        <attr name="starFill" format="reference" />
+    </declare-styleable>
+
+    <!-- 自定义圆形头像控件（下方加字） -->
+    <declare-styleable name="MyYuan">
+        <attr name="yuan_text" format="string"/>
+        <attr name="yuan_textsize" format="integer"/>
+        <attr name="yuan_textcolor" format="color"/>
+        <attr name="yuan_bgcolor" format="color"/>
+        <attr name="yuan_alpha" format="integer"/>
+        <attr name="yuan_Fstatr" format="integer"/>
+        <attr name="yuan_Fstop" format="integer"/>
+    </declare-styleable>
 </resources>
