--- a/app/src/main/res/layout/activity_password_reset.xml
+++ b/app/src/main/res/layout/activity_password_reset.xml
@@ -59,6 +59,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginBottom="@dimen/dp_50"
         android:text="@string/common_step_complete" />
 
 </LinearLayout>
