--- a/app/src/main/res/layout/dialog_nonet.xml
+++ b/app/src/main/res/layout/dialog_nonet.xml
@@ -21,40 +21,33 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
-            android:text="@string/time_title"
+            android:text="网络错误"
             android:textColor="#333333"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <LinearLayout
-            android:id="@+id/ll_time_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            android:gravity="center"
             android:paddingTop="15dp"
             android:paddingBottom="5dp">
 
-            <com.ljy.demo.widget.LoopView
-                android:id="@+id/lv_time_hour"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:lv_textSize="18sp" />
+            <ImageView
+                android:layout_width="@dimen/dp_50"
+                android:layout_height="@dimen/dp_50"
+                android:src="@mipmap/no_networks_found" />
 
-            <com.ljy.demo.widget.LoopView
-                android:id="@+id/lv_time_minute"
-                android:layout_width="0px"
+            <com.ljy.widget.view.SmartTextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:lv_textSize="18sp" />
-
-            <com.ljy.demo.widget.LoopView
-                android:id="@+id/lv_time_second"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:lv_textSize="18sp" />
-
+                android:layout_marginTop="@dimen/dp_8"
+                android:text="网络不给力，重新试一下吧！"
+                android:textColor="@color/colorT9"
+                android:textSize="@dimen/sp_14"
+                android:layout_marginBottom="@dimen/dp_5"
+                />
         </LinearLayout>
 
         <View
