--- a/app/src/main/res/layout/item_test_two.xml
+++ b/app/src/main/res/layout/item_test_two.xml
@@ -3,39 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_100"
     android:background="#f8f8f8"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/dp_10"
             >
-
             <TextView
                 android:id="@+id/test_item_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/dp_10"
                 android:text="我爱小狗"
                 android:textColor="#333333"
-                android:textSize="16sp" />
+                android:textSize="@dimen/sp_16" />
 
             <TextView
                 android:id="@+id/test_item_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/test_item_title"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/dp_10"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:text="我爱小狗我爱小狗我爱小狗我爱小狗"
-                android:textColor="#999999"
-                android:textSize="14sp" />
+                android:textColor="@color/colorT9"
+                android:textSize="@dimen/sp_14" />
         </LinearLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -44,5 +45,18 @@
             />
     </RelativeLayout>
 
+
+
+    <TextView
+        android:id="@+id/tv_delete"
+        android:layout_width="@dimen/dp_70"
+        android:layout_height="match_parent"
+        android:background="#FFF55030"
+        android:gravity="center"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:text="删除"
+        android:textColor="#FFFFFFFF"
+        android:textSize="@dimen/sp_14" />
 
 </LinearLayout>
