--- a/app/src/main/res/layout/fragment_test_d.xml
+++ b/app/src/main/res/layout/fragment_test_d.xml
@@ -39,6 +39,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:text="点我进入界面状态案例" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_test_up"
+                style="@style/ButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="点我进入上传图片案例" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_test_login"
