--- a/app/src/main/res/layout/item_test_two.xml
+++ b/app/src/main/res/layout/item_test_two.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_100"
+    android:layout_height="@dimen/dp_65"
     android:background="#f8f8f8"
     android:orientation="horizontal"
     >
@@ -47,6 +47,25 @@
 
 
 
+    <LinearLayout
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
+
+
+        <TextView
+            android:id="@+id/tv_details"
+            android:layout_width="@dimen/dp_70"
+            android:layout_height="match_parent"
+            android:background="#FF9D00"
+            android:gravity="center"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:text="编辑"
+            android:textColor="#FFFFFFFF"
+            android:textSize="@dimen/sp_14" />
+
     <TextView
         android:id="@+id/tv_delete"
         android:layout_width="@dimen/dp_70"
@@ -58,5 +77,5 @@
         android:text="删除"
         android:textColor="#FFFFFFFF"
         android:textSize="@dimen/sp_14" />
-
+    </LinearLayout>
 </LinearLayout>
