--- a/app/src/main/res/layout/dialog_input.xml
+++ b/app/src/main/res/layout/dialog_input.xml
@@ -8,7 +8,7 @@
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/dialog_message_round_size"
     app:cardElevation="0px"
-    tools:context="com.hjq.demo.com.ljy.demo.ui.dialog.InputDialog">
+    tools:context="com.ljy.demo.ui.dialog.InputDialog">
 
     <LinearLayout
         android:layout_width="match_parent"
